<resources>
    <string name="app_name">NeumoniaApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_comorbilidades">Comorbilidades</string>
    <string name="title_activity_riesgo_social">Riesgo Social</string>
    <string name="title_activity_datos_generales">Datos Generales</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="title_activity_paraclinicos_a">Paraclinicos A</string>
    <string name="title_activity_definir_gravedad">Definir Gravedad</string>
    <string name="title_activity_recomendaciones">Recomendaciones para su paciente</string>
    <string name="title_activity_recomendaciones_diarias">Recomendaciones para su paciente</string>

    <string-array name="configuracion">
        <item>configuracion</item>
        <item>UREA o BUN</item>
        <item>Procalcitonina</item>
        <item>PRC</item>
        <item>Saturacion de Oxigeno</item>
        <item>Gases arteriales</item>
        <item>Radiografía de Torax</item>
        <item>Creatinina</item>
        <item>Gram y cultivo de esputo</item>
        <item>Gram y cultivo de liquido pleural</item>
        <item>Citoquimico de liquido pleural</item>
        <item>Hemograma</item>
        <item>Toracocentesis</item>
        <item>Antigeno urinario de neumococo</item>
        <item>Antigeno urinario de legionella</item>
        <item>TP y TPT</item>
        <item>Blirubinas</item>
    </string-array>
    <string-array name="comorbilidades">
        <item>Comorbilidades</item>
        <item>EPOC</item>
        <item>Insuficiencia Cardiaca (IC)</item>
        <item>Diabetis Mellitus (DM)</item>
        <item>Enfermedad Renal Crónica (ERC)</item>
        <item>Abuso de alcohol</item>
        <item>Inmunosupresión</item>
        <item>Neoplasias</item>
        <item>Uso de antibióticos previos</item>
        <item>Alergia a las penicilinas</item>
        <item>Intolerancia a los macrólidos</item>
    </string-array>

    <string-array name="riesgosocial">
        <item>Riesgo Social</item>
        <item>Incapacidad de autocuidado</item>
        <item>Alteración cognitiva o mental</item>
        <item>Incapacidad para mantener la ingestión oral</item>
        <item>Historia de abuso de psicofármacos</item>
        <item>Mal soporte familiar y social</item>
    </string-array>

    <string-array name="germengrave">
        <item>Germen Grave</item>
        <item>Terapia con corticosteroides de mas de 10mg</item>
        <item>Terapia de antibióticos de amplio espectro de  mas de 7 días</item>
        <item>Mal nutricion</item>
        <item>Fumador</item>
        <item>Paciente con VIH tardía</item>
        <item>Enfermedad renal crónica en hemodiálisis</item>
        <item>Infección previa por influenza</item>
        <item>Neumonía necrosante</item>
        <item>Infeción en piel concomitante</item>
        <item>Problemas estructurales pulmonares</item>
        <item>Obstruccion endotraqueal</item>

    </string-array>
    <string-array name="riesgo">
        <item>Bajo</item>
        <item>Moderado</item>
        <item>Grave</item>
        <item>Sano</item>
        <item>Muerto</item>
    </string-array>

    <string name="puntaje">\nPuntaje</string>
    <string name="lugar">\nLugar de atención:</string>
    <string name="germen">\nFactor de riesgo para germen:</string>
    <string name="tratamiento">\nTratamiento antibiótico:</string>
    <string name="recomendacion">\nRecomendaciones finales:</string>
    <string name="title_activity_riesgo_germen_med">RiesgoGermenMedActivity</string>
    <string name="title_activity_criterios_mayores">CriteriosMayoresActivity</string>
    <string name="title_activity_riesgo_germen_grav">RiesgoGermenGravActivity</string>
    <string name="title_activity_criterios_menores">CriteriosMenoresActivity</string>
    <string name="title_activity_diagnostico_dudoso">DiagnosticoDudosoActivity</string>
    <string name="title_activity_informacion">InformacionActivity</string>
    <string name="title_activity_pacientes">PacientesActivity</string>
    <string name="title_activity_patients_list">PatientsListActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_modificar_datos">ModificarDatosActivity</string>


</resources>
