<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_recomendaciones"
    tools:context="co.edu.uninorte.neumoniaapp.RecomendacionesActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/gtxt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre del Paciente"
            android:gravity="center_vertical"
            android:textSize="@dimen/listsize"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/listsize"
            android:gravity="center"
            android:hint="Nombre o identificacion"
            android:inputType="textPersonName"
            android:id="@+id/idpaciente" />
    </LinearLayout>
    <TextView
        android:id="@+id/puntaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/puntaje"
        android:textSize="@dimen/recommendation"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/lugar"
        android:textSize="@dimen/recommendation"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/germen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/germen"
        android:textSize="@dimen/recommendation"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/tratamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/tratamiento"
        android:textSize="@dimen/recommendation"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/recFinales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recomendacion"
        android:textSize="@dimen/recommendation"
        android:textColor="@android:color/black"/>

</LinearLayout>
    </ScrollView>
</LinearLayout>
